--- a/_posts/2022-03-29-名词解析.md
+++ b/_posts/2022-03-29-名词解析.md
@@ -94,9 +94,12 @@ tags: 名词 内存 解析
 - 灰度发布，只升级部分
 - 滚动发布，每次升级一个或多个服务，升级后加入生成环境
 - MTTD（Mean Time to Detect，平均探测时间）
-
-
-
+- ESB（Enterprise Service Bus，企业服务总线）
+- PDCA（plan do check act）计划-处理-检查-行为
+- 毛刺，在短暂的某一刻，服务器性能指标（如流量、磁盘IO、CPU使用率等）远大于该时刻前后时间段。毛刺的出现代表资源利用不均匀，不充分，容易诱发其他更严重的问题。
+- 网络孤岛，部分机器与整个集群失去网络链接，分裂为一个小集群并且发生数据不一致的状况
+- 数据倾斜，一般来说数据倾斜是由于负载均衡实施效果不好引起的
+- 脑裂，集群中部分节点之间网络不可达而引起的系统分裂，不同分裂的小集群会按照各自的状态提供服务，原本的集群会同时存在不一致的反应，造成节点之间互相争抢资源，系统混乱，数据损坏。
 
 
 
