--- a/_posts/2022-07-02-全球同服设计.md
+++ b/_posts/2022-07-02-全球同服设计.md
@@ -27,4 +27,21 @@ tags: 游戏 全球同服 架构设计
     - 分离游戏中占用系统资源（CPU、内存、IO等）较多的功能，独立服务
     - 多线程并发的编程方式适应多核处理器
     - 宁可服务器之间多复制数据，也要保持清晰的数据流向（数据拷贝，逻辑清晰，逻辑上可能需要牺牲。若是功能模块之前数据复制保证清晰流向是好方式）
-    - 
+
+### 分布式架构演进之路 (https://z.itpub.net/article/detail/2116776FDBA71190378BB4720F8C1EB8)
+
+#### 架构设计原则
+
+- N+1设计。系统中的每个组件都应做到没有单点故障；
+- 回滚设计。确保系统可以向前兼容，在系统升级时应能有办法回滚版本；
+- 禁用设计。应该提供控制具体功能是否可用的配置，在系统出现故障时能够快速下线功能；
+- 监控设计。在设计阶段就要考虑监控的手段；
+- 多活数据中心设计。若系统需要极高的高可用，应考虑在多地实施数据中心进行多活，至少在一个机房断电的情况下系统依然可用；
+- 采用成熟的技术。刚开发的或开源的技术往往存在很多隐藏的bug，出了问题没有商业支持可能会是一个灾难；
+- 资源隔离设计。应避免单一业务占用全部资源；
+- 架构应能水平扩展。系统只有做到能水平扩展，才能有效避免瓶颈问题；
+- 非核心则购买。非核心功能若需要占用大量的研发资源才能解决，则考虑购买成熟的产品；
+- 使用商用硬件。商用硬件能有效降低硬件故障的机率；
+- 快速迭代。系统应该快速开发小功能模块，尽快上线进行验证，早日发现问题大大降低系统交付的风险；
+- 无状态设计。服务接口应该做成无状态的，当前接口的访问不依赖于接口上次访问的状态。
+- https://jishuin.proginn.com/p/763bfbd7f4ea
