--- a/_posts/2019-09-09-GO.md
+++ b/_posts/2019-09-09-GO.md
@@ -2388,7 +2388,7 @@ func Instance() *singleton {
 }
 ```
 
-- goroutine与操作系统线程的差别
+- goroutine与操作系统线程的差别（https://github.com/aceld/golang/blob/main/2%E3%80%81Golang%E7%9A%84%E5%8D%8F%E7%A8%8B%E8%B0%83%E5%BA%A6%E5%99%A8%E5%8E%9F%E7%90%86%E5%8F%8AGMP%E8%AE%BE%E8%AE%A1%E6%80%9D%E6%83%B3%EF%BC%9F.md）
     - **栈增长方式**：
         - `goroutine是可增长的栈`。典型情况下初始大小2kb，栈可动态扩容到1GB，按需增大和缩小。
         - OS线程是固定大小的栈内存（通常是2MB） 
