--- a/_posts/2022-03-29-名词解析.md
+++ b/_posts/2022-03-29-名词解析.md
@@ -100,7 +100,9 @@ tags: 名词 内存 解析
 - 网络孤岛，部分机器与整个集群失去网络链接，分裂为一个小集群并且发生数据不一致的状况
 - 数据倾斜，一般来说数据倾斜是由于负载均衡实施效果不好引起的
 - 脑裂，集群中部分节点之间网络不可达而引起的系统分裂，不同分裂的小集群会按照各自的状态提供服务，原本的集群会同时存在不一致的反应，造成节点之间互相争抢资源，系统混乱，数据损坏。
-
+- WSDL（Web Services Description Language, Web服务描述语言）是为描述Web服务发布的XML格式
+- IDL（Interactive Data Language 交互式数据语言）
+- CAP理论（Consistency 一致性、Availability 可用性、Partition Tolerance 分区容错性）
 
 
 
