--- a/_posts/2022-04-02-Go版本升级mod.md
+++ b/_posts/2022-04-02-Go版本升级mod.md
@@ -14,3 +14,6 @@ tags: go mod 版本升级
 2. 进到对应go.mod根目录执行 `go mod tidy`
 3. 重新编译
 4. vscode mod方式对应的setting go path要与环境变量对应的go path 一致，否则会出现 vscode golint找不到包
+
+### mod 版本
+https://github.com/aceld/golang/blob/main/8%E3%80%81%E7%B2%BE%E9%80%9AGolang%E9%A1%B9%E7%9B%AE%E4%BE%9D%E8%B5%96Gomodules.md
