--- a/_posts/2019-09-09-GO.md
+++ b/_posts/2019-09-09-GO.md
@@ -2428,7 +2428,14 @@ func Instance() *singleton {
     - CPU性能剖析：识别出执行过程中需要CPU最多的函数，在每个CPU上面执行的线程都每隔几毫秒会定期地被操作系统中断，在每次中断过程中记录一个性能剖析事件，然后恢复正常执行。
     - 堆性能剖析：识别出负责分配最多内存的语句。性能剖析库对协程内部内存分配调用进行采样，因此每个性能剖析事件平均记录了分配的512KB内存
     - 阻塞性能剖析：识别出那些阻塞协程最久的操作，例如系统调用，通道发送和接收数据以及获取锁等，性能分析库在一个goroutine每次被上述操作之一阻塞的时候记录一个事件 
-
+- go test 禁用缓存
+```sh
+go test -count=1 test.go
+# 手动清除缓存
+go clean -testcache
+# vscode 配置
+"go.testFlags": ["-v","-count=1"]
+```
 
 ### 变量
 - `:=`省略var，左侧没有`声明新的变量`，产生编译错误（常用于初始化声明）
@@ -3294,3 +3301,25 @@ Entering interactive mode (type "help" for commands, "o" for options)
 smakry@iMac /tmp % go tool pprof -http localhost:3001 /Users/smakry/pprof/pprof.alloc_objects.alloc_space.inuse_objects.inuse_space.025.pb.gz
 Serving web UI on http://localhost:3001
 ```
+
+#### runtime.Gosched 让出cpu时间片，默认情况是单procs运行，cpu切换执行。
+```go
+func say(s string) {
+    for i := 0; i < 2; i++ {
+        runtime.Gosched()
+        fmt.Println(s)
+    }
+}
+
+func Test_main(t *testing.T) {
+    // runtime.GOMAXPROCS(1)
+    go say("world")
+    say("your say hello")
+}
+
+```
+
+
+
+
+
