--- a/_posts/2022-03-29-名词解析.md
+++ b/_posts/2022-03-29-名词解析.md
@@ -101,8 +101,13 @@ tags: 名词 内存 解析
 - 数据倾斜，一般来说数据倾斜是由于负载均衡实施效果不好引起的
 - 脑裂，集群中部分节点之间网络不可达而引起的系统分裂，不同分裂的小集群会按照各自的状态提供服务，原本的集群会同时存在不一致的反应，造成节点之间互相争抢资源，系统混乱，数据损坏。
 - WSDL（Web Services Description Language, Web服务描述语言）是为描述Web服务发布的XML格式
-- IDL（Interactive Data Language 交互式数据语言）
+- IDL（Interface Description Language，接口描述语言）
 - CAP理论（Consistency 一致性、Availability 可用性、Partition Tolerance 分区容错性）
+- 沙盒，在受限的安全环境中运行应用程序的一种做法
+- 沙盒程序，通常为了满足培训、运行演示、启用或概念验证的目的而创建，因此不会承载实时流量
+- 生产程序，相比沙盒
+- PoC（Proof of Concept 概念验证）
+- IPC（Inter-Process Communication 进程间通信）
 
 
 
