--- a/_posts/2022-04-02-Go版本升级mod.md
+++ b/_posts/2022-04-02-Go版本升级mod.md
@@ -17,3 +17,24 @@ tags: go mod 版本升级
 
 ### mod 版本
 https://github.com/aceld/golang/blob/main/8%E3%80%81%E7%B2%BE%E9%80%9AGolang%E9%A1%B9%E7%9B%AE%E4%BE%9D%E8%B5%96Gomodules.md
+
+```
+`GOPROXY` - 模块代理 URL 列表。 go 命令将尝试按顺序从每个服务器下载模块。 关键字 direct 指示 go 命令从开发模块的版本控制存储库下载模块，而不是使用代理。
+`GOPRIVATE` - 应该被视为私有的模块路径前缀的 glob 模式列表 (注：glob 是用于匹配符合指定模式的文件集合的一种语言，下同)。 充当 “GONOPROXY” 和 “GONOSUMDB” 的默认值。
+`GONOPROXY` - 不应从代理下载的模块路径前缀的 glob 模式列表。 go 命令将从它们开发的版本控制存储库中下载匹配的模块，而不管 GOPROXY。
+`GONOSUMDB` - 不应使用公共校验和数据库 sum.golang.org 检查的模块路径前缀的 glob 模式列表。
+`GOINSECURE` - 可以通过 HTTP 和其他不安全协议检索的模块路径前缀的 glob 模式列表。
+```
+
+- `GONOSUMDB`无需校验文件一致性，私有仓库可配置，多个用逗号隔开
+	```sh
+	go env -w GONOSUMDB=*.corp.example.com,*.corp.example.com2
+	```
+- `GOPRIVATE`用来控制go命令把哪些仓库看作私有仓库
+	```sh
+	// 私人仓库
+	go env -w GOPRIVATE=*.corp.example.com,rsc.io/private
+	// 私有仓库存在一个组织下
+	go env -w GOPRIVATE=github.com/org_name
+	```
+	
