--- a/_posts/2022-04-24-git删除提交节点.md
+++ b/_posts/2022-04-24-git删除提交节点.md
@@ -159,3 +159,37 @@ funnymon  ssh://git@git.wll:2289/funnymon/entirety.git (push)
 # 删除本地缓存
 smakry@iMac entirety % git rm -r --cached .
 ```
+
+6. 删除子模块
+rm -rf 子模块目录 删除子模块目录及源码
+vi .gitmodules 删除项目目录下.gitmodules文件中子模块相关条目
+vi .git/config 删除配置项中子模块相关条目
+rm .git/module/* 删除模块下的子模块目录，每个子模块对应一个目录，注意只删除对应的子模块目录即可
+执行完成后，再执行添加子模块命令即可，如果仍然报错，执行如下：
+
+git rm --cached 子模块名称
+
+完成删除后，提交到仓库即可。
+
+
+### git操作，将远程仓库A中的dev分支复制到仓库B中
+```sh
+// 切换到B仓库中
+cd B
+// remote远程仓库A
+git remote add A git@github.com:xxxx/xxx/A.git
+// 拉去A中的dev分支
+git fetch A dev
+// 在B中创建新分支 dev (以A/dev分支创建)
+git checkout -b dev B/dev
+// 提交dev分支到远程仓库B中(当前所处分支为dev)
+git push origin -u dev
+```
+
+
+
+
+
+
+
+
