--- a/_posts/2022-04-24-git删除提交节点.md
+++ b/_posts/2022-04-24-git删除提交节点.md
@@ -186,9 +186,22 @@ git checkout -b dev B/dev
 git push origin -u dev
 ```
 
+### git 子模块client稀疏检出操作
+```sh
+1. clone整个仓库后，子模块递归更新： git submodule update --init --recursive
+2. 进到子模块目录client添加git稀疏检出: git config core.sparsecheckout true
+3. 回到主目录添加稀疏检出文件:  echo "wll/*" >> .git/modules/client/info/sparse-checkout
+4. 回到子模块目录client 更新（若sparse-checkout 有修改）： git checkout
+```
 
-
-
+### git 修改提交记录信息
+```
+1. 查找对应提交log rebase:  git rebase -i 67670a417c9ffee20cfcc331bbcf4a7874d803a9^
+2. 修改制定提交记录 pick 修改为 edit，修改此处提交信息，保存退去
+3. 提交修改： git commit --amend 
+4. 继续变基： git rebase --continu
+5. 推送到远端： git push origin develop --force
+```
 
 
 
