--- a/_posts/2022-03-29-名词解析.md
+++ b/_posts/2022-03-29-名词解析.md
@@ -108,6 +108,10 @@ tags: 名词 内存 解析
 - 生产程序，相比沙盒
 - PoC（Proof of Concept 概念验证）
 - IPC（Inter-Process Communication 进程间通信）
-
-
-
+- BFF（Backend For Frontend 为前端应用开发的后端服务）
+- 康为定律，设计系统的架构受制于产生这些设计的组织的沟通结构
+- MTTR（Mean Time To Repair 平均恢复时间）
+- MTBF（Mean Time Between Failures 平均无故障时间）
+- MTTF（Mean Time To Fail 平均失效时间）
+- APM（Application Performance Monitoring 应用性能监控），用于监测、管理和优化应用程序性能的解决方案
+- JIT（Just-in-time compilation 及时编译/运行时编译）
