--- a/_posts/2022-04-14-Linux常用命令.md
+++ b/_posts/2022-04-14-Linux常用命令.md
@@ -136,9 +136,14 @@ telnet 192.168.31.1 80
 wget 'http://rdsbakbucket-japan-v2' -O 'hins100024807_data_20220922153303.rdb'
 ```
 
+8. man 文档阅读
 
-
-
+- 方括号 [ ]：方括号表示其中的内容是可选的。您可以选择包括方括号内的选项或参数，也可以不包括它们。
+- 竖线 |：竖线表示可选项或参数的选择。例如，command option1 | option2 表示您可以选择使用 option1 或 option2，而不是同时使用它们。
+- 尖括号 < >：尖括号表示其中的内容是必需的。您需要提供尖括号内的实际值或参数。
+- 大括号 { }：大括号通常用于分组选项。例如，command {option1 | option2} 表示您可以选择使用 option1 或 option2 中的一个，而不是同时使用它们。
+- 横杠 -：横杠通常用于表示选项的缩写或短格式。例如，-a 表示一个选项，而 --option 表示同一个选项的长格式。
+- 省略号 ...：省略号表示可以重复多次相同的选项或参数。例如，command option1 ... 表示您可以多次使用 option1
 
 
 
